# deribit-historical-data

./: .gitignore  LICENSE  README.md  deribit_fetcher.py  dev.md  future.py  main.py  option.py  pyproject.toml  requirements.txt  test.py
deribit_fetcher/: __init__.py  __main__.py  cli.py  common.py  config.py  fetch_futures.py  fetch_options.py  logger.py  utils.py
